--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -1,10 +1,10 @@
 .container {
-	  width :100%;
-		max-width: 1200px;
+      width :100%;
+        max-width: 1200px;
 }
 
 body  {
-		font-size:5em;
+        font-size:5em;
 }
 
 #chat_box {
@@ -12,3 +12,32 @@ float:left;
 width:100%;
 color:red;
 }
+
+.question {
+    width: 100%;
+    min-height: 3em;
+    border: 1px solid black;
+    position: relative;
+    overflow: hidden;
+}
+
+.question > * {
+    float: left;
+    font-size: 0.5em;
+    padding: 0;
+}
+.question p{
+    font-size: 0.3em;
+    max-width: 100%;
+}
+
+.question .button{
+    float:right;
+    width: 3em;
+    font-size: 0.5em;
+}
+
+.up {
+
+}
+
