--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -1,6 +1,7 @@
 .container {
       width :100%;
         max-width: 1200px;
+    position: relative;
 }
 
 body  {
@@ -14,8 +15,9 @@ color:red;
 }
 
 .question {
+    display: table;
     width: 100%;
-    min-height: 3em;
+/*   min-height: 3em;*/
     border: 1px solid black;
     position: relative;
     overflow: hidden;
@@ -24,20 +26,27 @@ color:red;
 .question > * {
     float: left;
     font-size: 0.5em;
-    padding: 0;
+    display: table-cell;
+    vertical-align: middle;
+/*    padding: 0;*/
 }
 .question p{
-    font-size: 0.3em;
+
+
+    padding-top: 1%;
+/*    font-size: 0.3em;*/
     max-width: 100%;
 }
 
 .question .button{
     float:right;
-    width: 3em;
+
+
+}
+button {
     font-size: 0.5em;
+    width: 100%;
 }
 
-.up {
 
-}
 
