--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -55,11 +55,13 @@ button {
     width: 100%;
     padding: 0;
 }
-.btn {
+.question .btn {
     padding: 6px 0;
 }
-
-
+.btn-primary {
+    background-color: #3FC380;
+    border-color: #37A86F;
+}
 .question h2{
     color:#446CB3;
     font-size: 1.1em;
@@ -69,7 +71,34 @@ button {
     margin-top: 20px;
 }
 
+.btn.remove {
+    margin-top: 15px;
+}
 
 
+.glass::before {
+/*    background-image: url('pelican.jpg');*/
+    -webkit-filter: blur(5px); -moz-filter: blur(5px); -o-filter: blur(5px); -ms-filter: blur(5px); filter: blur(5px);
+}
 
-
+.jumbotron {
+    margin-top: 60px;
+    background-color: #C5EFF7;
+    overflow: hidden;
+}
+.navbar-default {
+    background-color: #81CFE0;
+}
+form {
+    font-size: 1.5em;
+}
+.form-group input {
+    width:100%;
+}
+ .make-room {
+    padding: 20px;
+    font-size: inherit;
+    display: block;
+    margin: 0 auto;
+/*    float: right;*/
+ }
